re PR target/33963 (Dllimport attribute wrongly accepted on typedefs)

PR target/33963
	* tree.c (handle_dll_attribute): Disallow TYPE_DECLs for types
	other than structures and unions.

From-SVN: r132978